2010-12-31  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        fast/loader/about-blank-hash-change.html fails on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=51788

        I'm unable to reproduce the failure locally, so this patch is slightly
        speculative.  We need to be slighly more careful how we compare the
        fragment identifiers for Chromium because Chromium uses a URL parser
        that is more agressive about canonicalization.

        * page/Location.cpp:
        (WebCore::Location::setHash):

Canonical link: https://commits.webkit.org/65182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74843 268f45cc-cd09-0410-ab3c-d52691b4dbfc